# cp-tools

./: .gitignore  CLAUDE.md  CREDIT.html  CREDITS.toml  Cargo.toml  Makefile.toml  README.md  THIRD-PARTY-LICENSES.html  THIRD-PARTY-LICENSES.toml  about.hbs  about.toml  devshell.nix  flake.nix  languages.toml  package.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
cpt-core/: Cargo.toml
cpt-core/src/: commands.rs  config.rs  core.rs  dir.rs  generator.rs  judge.rs  lang.rs  logger.rs  main.rs  testcase.rs
cpt-core/src/commands/: batch_test.rs  build.rs  expand.rs  hack.rs  test.rs
cpt-core/src/commands/hack/: batch.rs  reactive.rs  special.rs
cpt-core/src/commands/test/: batch.rs  reactive.rs  special.rs
cpt-core/src/config/: syntax.rs  toml_loader.rs
cpt-core/src/core/: fs.rs  printer.rs  process.rs  task.rs
cpt-core/src/judge/: batch.rs  batch_test.rs  reactive.rs  special.rs
cpt-core/src/lang/: loader.rs  parser.rs
cpt-core/tests/: common.rs  hack_batch.rs  hack_reactive.rs  hack_special.rs  test.rs  test_batch.rs  test_reactive.rs  test_special.rs
cpt-extra/: Cargo.toml
cpt-extra/tests/: common.rs  cpp_bundle_simple.rs
cpt-extras/: Cargo.toml  cpp-bundle.rs  cpp_bundle.rs
cpt-stdx/: Cargo.toml
cpt-stdx/src/: error.rs  fs.rs  lib.rs  path.rs  process.rs  task.rs  tempfile.rs  trace_error.rs
data/: compile_commands.json
resources/: language.toml
resources/cpp/: .clang-format  create_dummy_headers.sh  format.awk
src/: command.rs  commands.rs  compilation.rs  config.rs  core.rs  fs.rs  judge.rs  main.rs  oj_client.rs  process.rs  task.rs  utility.rs
src/command/: build.rs  completion.rs  download.rs  expand.rs  login.rs  test.rs
src/command/expand/: beautify.rs  dummy_headers.rs
src/command/test/: batch.rs  special.rs
src/commands/: build.rs  compilation.rs  compile_opts.rs  completion.rs  expand.rs  test.rs
src/commands/expand/: beautify.rs  dummy_headers.rs
src/config/: compile_opts.rs  dirs.rs  logger.rs  metadata.rs  testcase.rs
src/core/: command.rs  error.rs  fs.rs  judge.rs  language.rs  printer.rs  process.rs  task.rs
src/core/command/: completion.rs  test.rs
src/core/command/test/: batch.rs  reactive.rs  runtwice.rs
src/judge/: config.rs
src/language_specific/: cpp.rs
src/language_specific/cpp/: compilation.rs  compile_opts.rs  expand.rs
src/language_specific/cpp/expand/: beautify.rs  dummy_headers.rs
src/oj_client/: atcoder.rs  base_client.rs
src/utility/: beautify.rs  compile.rs  dummy_headers.rs
tests/: test.rs
