[workspace]
resolver = "2"
members = ["cpt-core", "cpt-extras"]
default-members = ["cpt-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pachicobue"]
categories = ["command-line-utilities"]
repository = "https://github.com/pachicobue/cp-tools"
license = "MIT OR Apache-2.0"
rust-version = "1.83.0"
