[package]
name = "cpt"
description = "CPT main cli program"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
cpt-stdx.path = "../cpt-stdx"
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger = "0.11.6"
itertools.workspace = true
ignore.workspace = true
log.workspace = true
regex.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.2"
mockall = "0.13.0"
predicates = "3.1.2"
pretty_assertions = "1.4.0"
test-case = "3.3.1"
