[package]
name = "cpt-extras"
description = "CPT extra tools"
include = ["src/**/*", "README.md"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true


[dependencies]
cpt-stdx.path = "../cpt-stdx"
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger = "0.11.6"
log.workspace = true
regex = "1.11.1"
which = "7.0.1"
thiserror.workspace = true
