[package]
name = "cpt-stdx"
description = "CPT common library"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
dunce = "1.0.5"
etcetera = "0.8.0"
itertools.workspace = true
log.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
