[package]
name = "cpt-stdx"
description = "CPT common library"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
itertools.workspace = true
log.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_fs = "1.1.2"
pretty_assertions = "1.4.0"
rstest = "0.24.0"
test-case = "3.3.1"
